# ot-harjoitustyo

./: README.md
daily-planner-app/: alembic.ini  pyproject.toml  tasks.py
daily-planner-app/alembic/: env.py
daily-planner-app/alembic/versions/: 01e9a27ce093_added_a_check_for_first_time_login.py  34b9b553bb67_description_of_changes.py  3fab862670ae_initial_migration.py  53a32f5ffcea_initial_database_schema.py  61f6e19ae6aa_removed_unused_entity.py  64e97736bcda_added_dailyplan_entity_and_updated_user_.py  6c3e9bd78e01_add_user_id_to_activities.py  7bb314d8f3e6_.py  c1d4153a5778_added_age_sex_sleep_to_user.py  ee55400be01f_added_cascade_delete_to_activities_from_.py  f8ef9e33fe4e_new_columns_for_user.py
daily-planner-app/data/: database.sqlite  test_database.sqlite
daily-planner-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
daily-planner-app/src/: database_connection.py  index.py  initialize_database.py
daily-planner-app/src/entities/: activity.py  base.py  dailyplan.py  user.py
daily-planner-app/src/repositories/: activity_repository.py  dailyplan_repository.py  survey_repository.py  user_repository.py
daily-planner-app/src/services/: daily_planner_service.py  dailyplan_service.py  survey_service.py  user_service.py
daily-planner-app/src/tests/: test_daily_planner.py
daily-planner-app/src/ui/: advice_view.py  calendar_view.py  daily_planner_view.py  login_form.py  registration_form.py  source.view.py  source_view.py  survey_view.py  today_view.py  ui.py  user_info_view.py
(+13 files in other folders)
