[tool.poetry]
name = "daily-planner-app"
version = "0.1.0"
description = "Science based daily planner application"
authors = ["Riku <134082872+rigozu9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
