[tool.poetry]
name = "daily-planner-app"
version = "0.1.0"
description = "Science based daily planner application"
authors = ["Riku <134082872+rigozu9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^4.1.2"
sqlalchemy = "^2.0.28"
invoke = "^2.2.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
